# UnityAspectLock

./: .gitignore  CMakeLists.txt  README.md  UnityAspectLock.cpp
build-vs18/: UnityAspectLock.slnx
build-vs18/Release/: UnityAspectLock.exp  UnityAspectLock.lib
build-vs18/UnityAspectLock.dir/Debug/: objects.txt
build-vs18/UnityAspectLock.dir/MinSizeRel/: objects.txt
build-vs18/UnityAspectLock.dir/RelWithDebInfo/: objects.txt
build-vs18/UnityAspectLock.dir/Release/: UnityAspectLock.dll.recipe  exports.def  objects.txt
build-vs18/UnityAspectLock.dir/Release/UnityAspectLock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs18/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-vs18/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build-vs18/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs18/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
